syntax = "proto3";

package blockchain;

import "google/protobuf/timestamp.proto";

import "github.com/crazybits/x/crypto/crypto.proto";

message Block{

	BlockHeader header=1;
	repeated Transaction transactions=2;
}

message BlockHeader{

	google.protobuf.Timestamp time=1;
	int64 number=2;
	bytes nance=3;
	bytes prevHash=4;
	bytes currHash=5;
	crypto.Signature signature=6;
	crypto.PublicKey signee=7;
}

message Transaction{

	repeated Operation operations=1;
	repeated crypto.Signature signatures=2;
}

enum OperationType{

	UNDEFINED=0;
	Deposit=1;
	Withdraw=2;
}

message Operation{

	OperationType type=1;
	bytes payload=2;

}


message DepositOperation{
	
	Address receiver=1;
	int64 amount=2;
	string symbol=3;
}

message WithdrawOperation{
	
	Address sender=1;
	int64 amount=2;
	string symbol=3;
}


message Address{
	
	bytes addressByte=1;
}

message BlockchainInfo {

    uint64 height = 1;
    bytes currentBlockHash = 2;
    bytes previousBlockHash = 3;

}



